CMS is deprecated in JDK 9 and will be removed in a later release
- See http://openjdk.java.net/jeps/291